--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "hot": "mix watch --hot",
         "prod": "npm run production",
         "production": "mix --production",
-        "heroku-postbuild": "npm run prod"
+        "heroku-postbuild": "npm run prod",
+        "postinstall": "npm run production"
     },
     "devDependencies": {
         "axios": "^0.21",
